--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<body>
 		<!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
 		<header class="container">
-			<h1>I Have Posts</h1>
+			<h1>Infinite Posts</h1>
 		</header>
 		<section id="js-poststream" class="container"></section>
 
